Remove references to old style 'object';  Temp disable multi-choice test

--- a/albow/demo/logging.conf
+++ b/albow/demo/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,widget,Button,Label,TableHeaderView,TableRowView,DemoPaletteView,theme
+keys=root,widget,albow.themes.ThemeProperty,Button,Label,TableHeaderView,TableRowView,DemoPaletteView,theme
 
 [handlers]
 keys=consoleHandler
@@ -15,6 +15,12 @@ handlers=consoleHandler
 level=INFO
 handlers=consoleHandler
 qualname=widget
+propagate=0
+
+[logger_albow.themes.ThemeProperty]
+level=DEBUG
+handlers=consoleHandler
+qualname=ThemeProperty
 propagate=0
 
 [logger_Button]
