Fix logging so that it really works

--- a/albow/demo/logging.conf
+++ b/albow/demo/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,widget,albow.themes.ThemeProperty,Button,Label,TableHeaderView,TableRowView,DemoPaletteView,theme
+keys=root,Widget,albow.themes.ThemeProperty,albow.widgets.Button,albow.widgets.Label,TableHeaderView,TableRowView,DemoPaletteView,albow.themes.Theme
 
 [handlers]
 keys=consoleHandler
@@ -11,28 +11,28 @@ keys=simpleFormatter
 level=INFO
 handlers=consoleHandler
 
-[logger_widget]
+[logger_Widget]
 level=INFO
 handlers=consoleHandler
-qualname=widget
+qualname=Widget
 propagate=0
 
 [logger_albow.themes.ThemeProperty]
-level=DEBUG
-handlers=consoleHandler
-qualname=ThemeProperty
-propagate=0
-
-[logger_Button]
 level=INFO
 handlers=consoleHandler
-qualname=Button
+qualname=albow.themes.ThemeProperty
 propagate=0
 
-[logger_Label]
+[logger_albow.widgets.Button]
 level=INFO
 handlers=consoleHandler
-qualname=Label
+qualname=albow.widgets.Button
+propagate=0
+
+[logger_albow.widgets.Label]
+level=INFO
+handlers=consoleHandler
+qualname=albow.widgets.Label
 propagate=0
 
 [logger_TableHeaderView]
@@ -53,10 +53,10 @@ handlers=consoleHandler
 qualname=DemoPaletteView
 propagate=0
 
-[logger_theme]
+[logger_albow.themes.Theme]
 level=INFO
 handlers=consoleHandler
-qualname=theme
+qualname=albow.themes.Theme
 propagate=0
 
 [formatter_simpleFormatter]
