'albow' should always have been a package

--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -31,7 +31,7 @@
             ]
         },
 
-        "Widget": {
+        "albow.core.Widget": {
             "level": "INFO",
             "handlers": [
                 "consoleHandler"
