make a demo; PEP-8 update

--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -65,10 +65,13 @@
                 "consoleHandler"
             ],
             "propagate": "0"
+        },
+        "albow.demo.screens.DemoMenuBarScreen": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "0"
         }
-
-
-
-
     }
 }
