Get rid of unused configuration file for logging;  Make a better name for a demo file; Create a base demo screen class;  Make the start of the music demo using the base demo screen class; Make the menu bar screen use the base as a POC

--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -72,6 +72,14 @@
                 "consoleHandler"
             ],
             "propagate": "0"
+        },
+        "albow.demo.screens.DemoMenuScreen": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "0"
         }
+
     }
 }
