prep to make music utilities a static class

--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -79,6 +79,13 @@
                 "consoleHandler"
             ],
             "propagate": "0"
+        },
+        "albow.media.EnableMusicControl": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "0"
         }
 
     }
