New minimal list box widget; Cleaned up Label comments; Updated logging configuration for demo;  Put a border around palette for styling; Minor version update to account for new widget

--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -86,6 +86,13 @@
                 "consoleHandler"
             ],
             "propagate": "0"
+        },
+        "albow.widgets.ListBox": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "0"
         }
 
     }
