Refactor for clarity and split out class files

--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -93,7 +93,13 @@
                 "consoleHandler"
             ],
             "propagate": "0"
+        },
+        "albow.core.root": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "0"
         }
-
     }
 }
