First minimal external theme loader;  Unit tests pass;  Need to integrate into code
https://github.com/hasii2011/albow-python-3/issues/16

--- a/default-theme.ini
+++ b/default-theme.ini
@@ -59,32 +59,32 @@ margin = 3
 
 [Field]
 name = Field
-base = <albow.themes.Theme.Theme object at 0x103c97080>
+base = FrameBase
 
 [Dialog]
 name = Dialog
-base = 
+base =
 bg_color = (224, 224, 224)
 border_width = 2
 margin = 15
 
 [DirPathView]
 name = DirPathView
-base = <albow.themes.Theme.Theme object at 0x103c97080>
+base = FrameBase
 
 [FileListView]
 name = FileListView
-base = <albow.themes.Theme.Theme object at 0x103c97080>
+base = FrameBase
 scroll_button_color = (64, 64, 64)
 
 [FileDialog]
 name = FileDialog
-base = 
+base =
 up_button_text = <--
 
 [PaletteView]
 name = PaletteView
-base = 
+base =
 sel_width = 2
 scroll_button_size = 16
 scroll_button_color = (64, 64, 64)
@@ -92,19 +92,19 @@ highlight_style = reverse
 
 [TableView]
 name = TableView
-base = 
+base =
 bg_color = (65, 108, 178)
 
 [TextScreen]
 name = TextScreen
-base = 
+base =
 heading_font = (24, 'VeraBd.ttf')
 button_font = (18, 'VeraBd.ttf')
 margin = 20
 
 [TabPanel]
 name = TabPanel
-base = 
+base =
 tab_font = (18, 'Vera.ttf')
 tab_height = 24
 tab_border_width = 0
@@ -117,7 +117,7 @@ tab_dimming = 0.75
 
 [MultiChoice]
 name = MultiChoice
-base = 
+base =
 sel_width = 1
 highlight_color = (208, 210, 211)
 margin = 8
@@ -125,19 +125,19 @@ cell_margin = 2
 
 [TextMultiChoice]
 name = TextMultiChoice
-base = 
-sel_color = 
+base =
+sel_color =
 highlight_style = arrows
 
 [ImageMultiChoice]
 name = ImageMultiChoice
-base = 
+base =
 sel_color = (192, 192, 192)
 highlight_style = fill
 
 [MenuBase]
 name = MenuBase
-base = 
+base =
 bg_color = (255, 255, 255)
 fg_color = (0, 0, 0)
 disabled_color = (128, 128, 128)
@@ -145,16 +145,15 @@ margin = 8
 
 [MenuBar]
 name = MenuBar
-base = <albow.themes.Theme.Theme object at 0x103c974a8>
+base = MenuBase
 border_width = 0
 
 [Menu]
 name = Menu
-base = <albow.themes.Theme.Theme object at 0x103c974a8>
+base = MenuBase
 border_width = 1
 
 [MusicVolumeControl]
 name = MusicVolumeControl
-base = <albow.themes.Theme.Theme object at 0x103c97080>
+base = FrameBase
 fg_color = (64, 64, 64)
-
