This fixes image button: https://github.com/hasii2011/albow-python-3/issues/23
and provides a demo of image button
https://github.com/hasii2011/albow-python-3/issues/5

--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -46,6 +46,13 @@
             ],
             "propagate": "0"
         },
+         "albow.widgets.ImageButton": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "0"
+        },
         "albow.widgets.Label": {
             "level": "INFO",
             "handlers": [
