Trying to get code changes out that can be fixed with theme changes:
https://github.com/hasii2011/albow-python-3/milestone/1

--- a/default-theme.ini
+++ b/default-theme.ini
@@ -3,7 +3,7 @@ name = root
 base = 
 font = (15, 'Vera.ttf')
 fg_color = (0, 0, 0)
-bg_color = 
+bg_color = (255,255,255)
 bg_image = 
 scale_bg = False
 border_width = 0
