WIP - https://github.com/hasii2011/albow-python-3/issues/15

--- a/default-theme.ini
+++ b/default-theme.ini
@@ -3,7 +3,8 @@ name = root
 base = 
 font = (15, 'Vera.ttf')
 fg_color = (0, 0, 0)
-bg_color = (255,255,255)
+# bg_color = (255,255,255)
+bg_color = (208, 210, 211)
 bg_image = 
 scale_bg = False
 border_width = 0
@@ -20,12 +21,25 @@ disabled_bg_color =
 [RootWidget]
 name = RootWidget
 base = 
-bg_color = (0, 0, 0)
+bg_color = (208, 210, 211)
+
+[Shell]
+name = Shell
+base =
+bg_color = (208, 210, 211)
+border_width = 1
+border_color = (0, 128, 0)
+
+[Screen]
+name = Screen
+base =
+bg_color = (208, 210, 211)
+
 
 [Label]
 name = Label
 base = 
-bg_color = (255, 255, 255)
+bg_color = (208, 210, 211)
 fg_color = (0, 0, 0)
 
 [Button]
@@ -33,7 +47,8 @@ name = Button
 base = 
 margin = 8
 border_width = 2
-font = (18, 'VeraBd.ttf')
+font = (14, 'Vera.ttf')
+# font = (18, 'VeraBd.ttf')
 fg_color = (255, 255, 255)
 highlight_color = (0, 0, 0)
 disabled_color = (23, 62, 67)
@@ -64,7 +79,8 @@ base = FrameBase
 [Dialog]
 name = Dialog
 base =
-bg_color = (224, 224, 224)
+# bg_color = (224, 224, 224)
+bg_color = (208, 210, 211)
 border_width = 2
 margin = 15
 
@@ -93,19 +109,19 @@ highlight_style = reverse
 [TableView]
 name = TableView
 base =
-bg_color = (65, 108, 178)
+bg_color = (208, 210, 211)
 
 [TextScreen]
 name = TextScreen
 base =
-heading_font = (24, 'VeraBd.ttf')
-button_font = (18, 'VeraBd.ttf')
+heading_font = (18, 'VeraBd.ttf')
+button_font = (14, 'VeraBd.ttf')
 margin = 20
 
 [TabPanel]
 name = TabPanel
 base =
-tab_font = (18, 'Vera.ttf')
+tab_font = (14, 'Vera.ttf')
 tab_height = 24
 tab_border_width = 0
 tab_spacing = 4
@@ -119,7 +135,7 @@ tab_dimming = 0.75
 name = MultiChoice
 base =
 sel_width = 1
-highlight_color = (208, 210, 211)
+highlight_color = (106, 148, 204)
 margin = 8
 cell_margin = 2
 
@@ -138,7 +154,7 @@ highlight_style = fill
 [MenuBase]
 name = MenuBase
 base =
-bg_color = (255, 255, 255)
+bg_color = (208, 210, 211)
 fg_color = (0, 0, 0)
 disabled_color = (128, 128, 128)
 margin = 8
