Work in progress:  https://github.com/hasii2011/albow-python-3/issues/15

--- a/default-theme.ini
+++ b/default-theme.ini
@@ -40,7 +40,7 @@ bg_color = (208, 210, 211)
 name = Label
 base = 
 bg_color = (208, 210, 211)
-fg_color = (0, 0, 0)
+fg_color = (42, 41, 41)
 
 [Button]
 name = Button
@@ -48,12 +48,11 @@ base =
 margin = 8
 border_width = 2
 font = (14, 'Vera.ttf')
-# font = (18, 'VeraBd.ttf')
 fg_color = (255, 255, 255)
 highlight_color = (0, 0, 0)
 disabled_color = (23, 62, 67)
 highlight_bg_color = (212, 208, 200)
-enabled_bg_color = (128, 128, 128)
+enabled_bg_color = (65, 108, 170)
 disabled_bg_color = (106, 148, 204)
 
 [ImageButton]
@@ -75,6 +74,13 @@ margin = 3
 [Field]
 name = Field
 base = FrameBase
+
+[TextEditor]
+name = TextEditor
+base =
+bg_color = (42, 41, 41)
+fg_color = (255, 255, 255)
+border_color = (255, 255, 244)
 
 [Dialog]
 name = Dialog
@@ -168,6 +174,13 @@ border_width = 0
 name = Menu
 base = MenuBase
 border_width = 1
+
+[ListBox]
+name = ListBox
+base =
+bg_color =  (208, 210, 211)
+sel_color = (106, 148, 204)
+highlight_style =  'fill'
 
 [MusicVolumeControl]
 name = MusicVolumeControl
