Work in progress:  https://github.com/hasii2011/albow-python-3/issues/15

--- a/default-theme.ini
+++ b/default-theme.ini
@@ -3,7 +3,6 @@ name = root
 base = 
 font = (15, 'Vera.ttf')
 fg_color = (0, 0, 0)
-# bg_color = (255,255,255)
 bg_color = (208, 210, 211)
 bg_image = 
 scale_bg = False
@@ -85,7 +84,6 @@ border_color = (255, 255, 244)
 [Dialog]
 name = Dialog
 base =
-# bg_color = (224, 224, 224)
 bg_color = (208, 210, 211)
 border_width = 2
 margin = 15
@@ -102,7 +100,7 @@ scroll_button_color = (64, 64, 64)
 [FileDialog]
 name = FileDialog
 base =
-up_button_text = <--
+up_button_text = «
 
 [PaletteView]
 name = PaletteView
@@ -129,12 +127,12 @@ name = TabPanel
 base =
 tab_font = (14, 'Vera.ttf')
 tab_height = 24
-tab_border_width = 0
+tab_border_width = 1
 tab_spacing = 4
 tab_margin = 0
 tab_fg_color = (24, 189, 207)
 default_tab_bg_color = (106, 148, 204)
-tab_area_bg_color = (208, 210, 211)
+tab_area_bg_color = (65, 108, 178)
 tab_dimming = 0.75
 
 [MultiChoice]
@@ -148,7 +146,7 @@ cell_margin = 2
 [TextMultiChoice]
 name = TextMultiChoice
 base =
-sel_color =
+sel_color = (208, 210, 211)
 highlight_style = arrows
 
 [ImageMultiChoice]
@@ -178,7 +176,7 @@ border_width = 1
 [ListBox]
 name = ListBox
 base =
-bg_color =  (208, 210, 211)
+bg_color = (208, 210, 211)
 sel_color = (106, 148, 204)
 highlight_style =  'fill'
 
