Work in progress:  https://github.com/hasii2011/albow-python-3/issues/15

--- a/default-theme.ini
+++ b/default-theme.ini
@@ -113,7 +113,29 @@ highlight_style = reverse
 [TableView]
 name = TableView
 base =
+header_font = (14, 'Vera.ttf')
+header_fg_color = (255, 255, 244)
+header_bg_color = (106, 148, 204)
+header_spacing = 5
+column_margin = 2
+border_width = 1
+sel_color = (208, 210, 211)
+fg_color = (255, 255, 244)
+border_color = (255, 255, 244)
+bg_color = (65, 108, 178)
+
+[TableRowView]
+name = TableRowView
+base =
 bg_color = (208, 210, 211)
+scroll_button_color = (255, 255, 244)
+highlight_style = frame
+
+[TableHeaderView]
+name = TableHeaderView
+base =
+bg_color = (208, 210, 211)
+# border_width = 1
 
 [TextScreen]
 name = TextScreen
