Work in progress:  https://github.com/hasii2011/albow-python-3/issues/15

--- a/default-theme.ini
+++ b/default-theme.ini
@@ -168,13 +168,16 @@ cell_margin = 2
 [TextMultiChoice]
 name = TextMultiChoice
 base =
+bg_color = (106, 148, 204)
+fg_color = (255, 255, 244)
 sel_color = (208, 210, 211)
 highlight_style = arrows
 
 [ImageMultiChoice]
 name = ImageMultiChoice
 base =
-sel_color = (192, 192, 192)
+sel_color = (208, 210, 211)
+highlight_color = (106, 148, 204)
 highlight_style = fill
 
 [MenuBase]
