https://github.com/hasii2011/albow-python-3/issues/34

--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -88,6 +88,14 @@
             ],
             "propagate": "0"
         },
+        "albow.demo.screens.DemoUserEventsScreen": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "0"
+        },
+
         "albow.media.EnableMusicControl": {
             "level": "INFO",
             "handlers": [
