--- a/albow/themes/resources/default-theme.ini
+++ b/albow/themes/resources/default-theme.ini
@@ -137,6 +137,15 @@ base =
 bg_color = (208, 210, 211)
 # border_width = 1
 
+[TextBox]
+name = TextBox
+base =
+border_width = 1
+bg_color = (255, 255, 255)
+scroll_button_size = 16
+scroll_button_color = (64, 64, 64)
+
+
 [TextScreen]
 name = TextScreen
 base =
