--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -6,7 +6,8 @@
             "format": "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
         },
         "demoSimple": {
-            "format": "%(asctime)s - %(levelname)s: %(module)s: %(message)s"
+            "format": "%(asctime)s.%(msecs)06d - %(levelname)s: %(module)s: %(message)s",
+            "datefmt" : "%H:%M:%S"
         }
     },
     "handlers": {
