Partial version of this: https://github.com/hasii2011/albow-python-3/issues/37

--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -62,6 +62,13 @@
             ],
             "propagate": "0"
         },
+        "albow.input.Field": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "0"
+        },
 
         "albow.themes.ThemeProperty": {
             "level": "INFO",
