Partial version of this: https://github.com/hasii2011/albow-python-3/issues/38
First version of working refactored event loop

--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -33,8 +33,14 @@
             ],
             "propagate": "0"
         },
-
         "albow.core.ui.Widget": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "0"
+        },
+        "albow.core.ui.RootWidget": {
             "level": "INFO",
             "handlers": [
                 "consoleHandler"
