Fixed for real: https://github.com/hasii2011/albow-python-3/issues/17

--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -47,6 +47,14 @@
             ],
             "propagate": "0"
         },
+        "albow.core.ui.AlbowEventLoop": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "0"
+        },
+
         "albow.widgets.Button": {
             "level": "INFO",
             "handlers": [
