Sixth of new demo program
https://github.com/hasii2011/albow-python-3/issues/33

--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -98,6 +98,34 @@
             ],
             "propagate": "0"
         },
+        "albow.media.EnableMusicControl": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "0"
+        },
+        "albow.widgets.ListBox": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "0"
+        },
+        "albow.containers.TabPanel": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "0"
+        },
+        "albow.demo.AlbowDemoScreen": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "0"
+        },
         "albow.demo.screens.DemoMenuBarScreen": {
             "level": "INFO",
             "handlers": [
@@ -113,21 +141,6 @@
             "propagate": "0"
         },
         "albow.demo.screens.DemoUserEventsScreen": {
-            "level": "INFO",
-            "handlers": [
-                "consoleHandler"
-            ],
-            "propagate": "0"
-        },
-
-        "albow.media.EnableMusicControl": {
-            "level": "INFO",
-            "handlers": [
-                "consoleHandler"
-            ],
-            "propagate": "0"
-        },
-        "albow.widgets.ListBox": {
             "level": "INFO",
             "handlers": [
                 "consoleHandler"
