--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -1,6 +1,6 @@
 {
     "version": 1,
-    "disable_existing_loggers": false,
+    "disable_existing_loggers": "False",
     "formatters": {
         "simple": {
             "format": "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
@@ -31,14 +31,14 @@
             "handlers": [
                 "consoleHandler"
             ],
-            "propagate": "0"
+            "propagate": "False"
         },
         "__main__": {
             "level": "INFO",
             "handlers": [
                 "consoleHandler"
             ],
-            "propagate": "0"
+            "propagate": "False"
         }
     }
 }
