--- a/albow/themes/resources/default-theme.ini
+++ b/albow/themes/resources/default-theme.ini
@@ -1,25 +1,25 @@
 [root]
 name = root
-base = 
+base =
 font = (15, 'Vera.ttf')
 fg_color = (0, 0, 0)
 bg_color = (208, 210, 211)
-bg_image = 
+bg_image =
 scale_bg = False
 border_width = 0
-border_color = 
+border_color =
 margin = 0
-tab_bg_color = 
+tab_bg_color =
 sel_color = (208, 210, 211)
-highlight_color = 
-disabled_color = 
-highlight_bg_color = 
-enabled_bg_color = 
-disabled_bg_color = 
+highlight_color =
+disabled_color =
+highlight_bg_color =
+enabled_bg_color =
+disabled_bg_color =
 
 [RootWidget]
 name = RootWidget
-base = 
+base =
 bg_color = (208, 210, 211)
 
 [Shell]
@@ -37,13 +37,13 @@ bg_color = (208, 210, 211)
 
 [Label]
 name = Label
-base = 
+base =
 bg_color = (208, 210, 211)
 fg_color = (42, 41, 41)
 
 [Button]
 name = Button
-base = 
+base =
 margin = 8
 border_width = 2
 font = (14, 'Vera.ttf')
@@ -56,17 +56,17 @@ disabled_bg_color = (106, 148, 204)
 
 [ImageButton]
 name = ImageButton
-base = 
+base =
 highlight_color = (208, 210, 211)
 
 [CheckWidget]
 name = CheckWidget
-base = 
+base =
 smooth = True
 
 [FrameBase]
 name = FrameBase
-base = 
+base =
 border_width = 1
 margin = 3
 
@@ -87,6 +87,14 @@ base =
 bg_color = (208, 210, 211)
 border_width = 2
 margin = 15
+
+[TitledDialog]
+name = TitledDialog
+base =
+bg_color = (208, 210, 211)
+border_width = 1
+margin = 5
+wrap_width = 100
 
 [DirPathView]
 name = DirPathView
