Fixed https://github.com/hasii2011/albow-python-3/issues/59 Fixed https://github.com/hasii2011/albow-python-3/issues/62

--- a/albow/themes/resources/default-theme.ini
+++ b/albow/themes/resources/default-theme.ini
@@ -108,7 +108,7 @@ scroll_button_color = (64, 64, 64)
 [FileDialog]
 name = FileDialog
 base =
-up_button_text = «
+up_button_text = 
 
 [PaletteView]
 name = PaletteView
