<Update>[Pygame 2.0.0]: <Upgrade>
Cannot support OpenGL

[https://github.com/hasii2011/albow-python-3/issues/65]

--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -21,23 +21,15 @@
     "loggers": {
         "root": {
             "level": "INFO",
-            "handlers": [
-                "consoleHandler"
-            ],
+            "handlers": ["consoleHandler"],
             "propagate": "0"
         },
         "albow": {
             "level": "INFO",
-            "handlers": [
-                "consoleHandler"
-            ],
             "propagate": "False"
         },
         "__main__": {
             "level": "INFO",
-            "handlers": [
-                "consoleHandler"
-            ],
             "propagate": "False"
         }
     }
