--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-pygame==2.0.0.dev10
-jsonpickle==1.4.1
+pygame==2.0.0
+PyOpenGL==3.1.5
+PyOpenGL_accelerate==3.1.5
+wheel==0.35.1
+setuptools==50.3.2
+twine==3.2.0
