<Update>[Pygame 2.0.0]: Version 2.89.12
Give up on loading my own font in py2app

[https://github.com/hasii2011/albow-python-3/issues/68]

--- a/albow/demo/loggingConfiguration.json
+++ b/albow/demo/loggingConfiguration.json
@@ -14,18 +14,22 @@
         "consoleHandler": {
             "class": "logging.StreamHandler",
             "formatter": "demoSimple",
-            "stream": "ext://sys.stdout",
-            "level": "INFO"
+            "stream": "ext://sys.stdout"
         }
     },
     "loggers": {
         "root": {
             "level": "INFO",
             "handlers": ["consoleHandler"],
-            "propagate": "0"
+            "propagate": "False"
         },
         "albow": {
-            "level": "INFO",
+            "level": "WARNING",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+        "albow.themes": {
+            "level":     "WARNING",
             "propagate": "False"
         },
         "__main__": {
